# ladspa--

./: CMakeLists.txt  Makefile  README.md  README.txt  TODO.txt  ladspa++.h  ladspa--.pro  test_effect.cpp
doc/: CMakeLists.txt  Doxyfile.in  mainpage.h
examples/: CMakeLists.txt  Makefile  amplifier.cpp
src/: ladspa++.h
